fix: presentation h1 size on mobile exceeding scree

--- a/public/styles/presentation.css
+++ b/public/styles/presentation.css
@@ -27,3 +27,12 @@
   font-size: 10rem;
   margin: 1px;
 }
+
+@media screen and (max-width: 900px) {
+  #presentation span {
+    font-size: 5rem;
+  }
+  #presentation span:hover {
+    font-size: 7rem;
+  }
+}
